# blank-lambda-for-terraform

./: .gitignore  README.md  pyproject.toml
deploy/: config.json  dot.env  dot.envrc  input_for_invocation.json  update.py
src/: lambda_function.py
